--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <title>Peer Group Project 1</title>
     <meta name="description" content="Webpage">
 
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="main.css">
 
   </head>
 
   <body>
-    <table id="table"></table>
 
+    <table id="table">
+<tr>
+  <td>Name</td>
+  <td>%Bonus</td>
+  <td>Adj. Income</td>
+  <td>Bonus(total)</td>
+</tr>
+    </table>
     <script src="group_01.js"></script>
   </body>
 
